--- a/static/scss/advanced-tech.scss
+++ b/static/scss/advanced-tech.scss
@@ -1,7 +1,7 @@
-#reduxWorkshopContainer {
+#advancedTechContainer {
     padding: 5%;
 
-    .triangle-react-container {
+    .advanced-tech-container {
         display: flex;
         flex-direction: column;
 
