--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,12 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
-	<link rel="stylesheet" href="/build/triangle-react.css">
+	<link rel="stylesheet" href="/build/advanced-tech.css">
 	<link rel="stylesheet" href="/build/vendor.css">
 </head>
 <body>
 	<input id="userData" type="hidden" name="users" value="{{users}}" />
-    <div id="reduxWorkshopContainer"></div>
+    <div id="advancedTechContainer"></div>
 	<div id="modalContainer"></div>
     <script src="/build/react.min.js"></script>
     <script src="/build/react-dom.min.js"></script>
